force-app/main/default/objects/CertificatRGE__c/CertificatRGE__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Liste des informations sur les certificats RGE en fonction du dépot et des dates de validité</description>
    <label>Certificat RGE</label>
</CustomObject>