force-app/main/default/objects/CertificatRGE__c/fields/bic__c.field-meta.xml
<CustomField>
    <fullName>bic__c</fullName>
    <label>BIC</label>
    <length>11</length>
    <type>Text</type>
</CustomField>