force-app/main/default/objects/CertificatRGE__c/fields/codeDepot__c.field-meta.xml
<CustomField>
    <fullName>codeDepot__c</fullName>
    <label>Code Dépot</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>