force-app/main/default/objects/CertificatRGE__c/fields/dateDebutValidite__c.field-meta.xml
<CustomField>
    <fullName>dateDebutValidite__c</fullName>
    <label>Date de début de validité</label>
    <required>true</required>
    <type>Date</type>
</CustomField>