force-app/main/default/objects/CertificatRGE__c/fields/dateFinValidite__c.field-meta.xml
<CustomField>
    <fullName>dateFinValidite__c</fullName>
    <label>Date de fin de validité</label>
    <required>true</required>
    <type>Date</type>
</CustomField>