force-app/main/default/objects/CertificatRGE__c/fields/numCertificat__c.field-meta.xml
<CustomField>
    <fullName>numCertificat__c</fullName>
    <label>N° Certificat</label>
    <length>40</length>
    <type>Text</type>
</CustomField>