force-app/main/default/objects/CertificatRGE__c/fields/numSiret__c.field-meta.xml
<CustomField>
    <fullName>numSiret__c</fullName>
    <label>N° SIRET</label>
    <length>40</length>
    <type>Text</type>
</CustomField>